--- a/doc/release/CHANGELOG.txt
+++ b/doc/release/CHANGELOG.txt
@@ -62,6 +62,8 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/)
 - DOS-style, text-only, "sell minerals" Commander dialog when not using voices - Kruzen
 - Full reimplementation of the "read speed" DOS option when not using voices - Kruzen
 - Pass through allies when auto-pilot is enabled
+- EXTENDED: New reports for the Syreen and Chmmr when they are cleansed by the Kohr-Ah by Tarp
+- CUSTOMSEED: Made a rudimentary function that puts some home worlds in their star's respective habitable zone
 
 
 ### Changed
@@ -114,6 +116,14 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/)
 - Change planet spin speed on scan screen depending on scan style chosen - Kruzen
 - CHEAT: Cleaned up allied race code so the unlock ships cheat will never mess with alliances
 - Center star search text as it's being typed - Kruzen
+- New shielded planet graphics that are shaded properly for where they are in their orbit. - Kruzen
+- EXTENDED: Moved around and added more dead Zoq-Fot-Pik colonies to these locations:
+			* Beta Tucanae
+			* Gamma Cassiopeiae
+			* Beta Cassiopeiae
+			* Beta Carinae
+- Adjusted the planet map height to match the PC and 3DO versions
+- Moved the "dead" slave-shielded world and starbase from Beta Ophiuchi I to Gamma Ophiuchi I (033.3 : 891.6) 
 
 
 ### Fixed
@@ -148,9 +158,10 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/)
 - HD: Starmap code is now scaled properly removing the need for HD cursor snap
 - HD: Fixed the Starmap grid so that it draws properly - Kruzen
 - Fix Flagship speed doubling when going from Save/Load screen straight to navigation
-- Fix SIS speed doubling when going from Save/Load screen straight to interplanetary navigation
 - HD: Remove red outline of defeated ships on the debris screen - Kruzen
 - Remove all alliances that have a broken alliance value during load
+- Fixed planet scan rotation value display so that it's accurate to the PC-DOS version
+- Show the Spathi SOI and give the player the Spathi password when using the Head Start cheat
 
 
 ## [v0.8.0.85]
