Remove references to the name "Serosis" from the repository
And replace it with JHGuitarFreak where applicable

--- a/doc/release/AUTHORS.txt
+++ b/doc/release/AUTHORS.txt
@@ -5,7 +5,7 @@ We worship these two higher beings for making the original, legendary game:
 MegaMod Contributers:
 -------------------------
 
-Serosis (Coding and art) <https://github.com/Serosis>
+Kohr-Ah Death (Coding and art) <https://github.com/JHGuitarFreak>
 DCzanik (Original HD art)
 Kwayne (Original HD art)
 Metamorphosis A.K.A. Matt Bentley (UQM-HD Remix Code)
